fix for about me overflow in samller pages and fotter init

--- a/src/components/about/About.scss
+++ b/src/components/about/About.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  height: 100vh;
+
   h2 {
     letter-spacing: 2px;
     padding-top: 2em;
@@ -29,6 +29,7 @@
     display: flex;
     flex-direction: column;
     margin: 20px;
+    min-height: 50vh;
 
     h5 {
       font-size: 1.7em;
